@startuml

scale 1.0
hide empty methods
hide empty attributes
skinparam arrowColor #DimGray
<style>
spotClass { BackgroundColor white }
</style>
skinparam class {
  BackgroundColor White
  HeaderBackgroundColor LightSteelBlue
}

class Game {
  state: GameState
  region: string
  oppositionId: number
}

class Dungeon {
  name: string
}

class Fight {
  round: number
}

class Creature {
  factionType: FactionType
  type : CreatureType
  name : string
  lifeMax : number
  life : number
}

class StatusApplication {
  power: number
  remainingDuration: number
}

class StatusType {
  name: String
  improvement: boolean
  expirationType: StatusExpirationType
  cumulative: boolean
  tagTypes: StatusTypeTagType[]
}

class Character {
  level: number
  useMana: boolean
}

class Enemy {
  baseName: string
  elementalResistances: Map<ElementType, number>
  champion: boolean
  actions: number
  step: number
  phase: number
}

class Skill {
  type: SkillIconType
  name: string
  targetType: SkillTargetType
  cost: number
  range: number
  cooldownMax: number
  cooldown: number
  description: string
  powerLevels: number[]
  status: StatusType
  improvementStatus: boolean
}

Game *-- "*" Dungeon : "Available\ndungeons"
Game *-- Dungeon : "Current\ndungeon"
Game *-- Fight
Game *-- Party
Dungeon *-- "*" Opposition
Fight -- Party
Fight -- Opposition
Fight *-- TurnOrder
Fight *-- Creature : "Active\ncreature"
Fight *-- "*" Creature : "Target\ncreatures"
TurnOrder o-- "*" Creature
Party *-- "*" PartyRow
PartyRow *-- "*" Character
Opposition *-- "*" OppositionRow
OppositionRow *-- "*" Enemy
Creature *-- "*" StatusApplication
StatusApplication -- StatusType
Creature <|-- Character
Character *-- "*" Skill
Creature <|-- Enemy

@enduml
